Fine tune css, fix scrollbar tone.

--- a/reactors-debugger/src/main/resources/io/reactors/debugger/css/jquery-terminal-overrides.css
+++ b/reactors-debugger/src/main/resources/io/reactors/debugger/css/jquery-terminal-overrides.css
@@ -1,8 +1,13 @@
 
 @@style(io/reactors/debugger/css/vars.css)
 
+.terminal {
+  color: var(--terminal-font-color);
+}
+
 .cmd {
   background-color: transparent;
+  color: var(--terminal-font-color);
 }
 
 .cmd .cursor.blink {
